[package]
name = "reconcise"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["deploy", "reconcile", "provisioning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hcloud = "0.6"

serde = "1"
serde_json = "1"
ron = "0.6"

async-trait = "0.1"